--- a/book_a_service.html
+++ b/book_a_service.html
@@ -47,7 +47,7 @@
           <div class="full">
             <div class="topbar-left">
               <ul class="list-inline">
-                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span><a href="tel:+91-1234567890" class="smooth" style="color: white;" title=""><span class="topbar-hightlight">+1234567890</span> </a></li>
+                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span> <span class="topbar-hightlight">+1234567890</span> </li>
                 <li> <span class="topbar-label"><i class="fa fa-envelope-o"></i></span> <span class="topbar-hightlight"><a href="mailto:info@yourdomain.com">info@yourdomain.com</a></span> </li>
               </ul>
             </div>
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
           <!-- logo start -->
-          <div class="logo"> <a href="index.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
+          <div class="logo"> <a href="it_home.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
           <!-- logo end -->
         </div>
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -87,12 +87,12 @@
           <div class="menu_side">
             <div id="navbar_menu">
               <ul class="first-ul">
-                <li> <a href="index.html">Home</a></li>
+                <li> <a class="active" href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li> <a href="service.html">Service</a>
-                  <ul>
+                  <!-- <ul>
                   <li><a href="service_detail.html">Services Detail</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li> <a href="contact.html">Contact</a></li>
               </ul>
@@ -257,7 +257,7 @@
               <h2>REQUEST A FREE QUOTE</h2>
               <p>Get answers and advice from people you want it from.</p>
             </div>
-            <div class="button_Section_cont"> <a class="btn dark_gray_bt" href="contact.html">Contact us</a> </div>
+            <div class="button_Section_cont"> <a class="btn dark_gray_bt" href="it_contact.html">Contact us</a> </div>
           </div>
         </div>
       </div>
@@ -267,7 +267,7 @@
 <!-- end section -->
 <!-- section -->
 <div class="section padding_layout_1" style="padding: 50px 0;">
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="full">
@@ -281,7 +281,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 <!-- end section -->
 <!-- Modal -->
@@ -320,7 +320,7 @@
         <form action="#" method="post">
           <input required type="email">
           <label for="email">Email</label>
-          <input class="submit" type="submit" value=""><i class="fas fa-arrow-right" style="color: white;"></i>
+          <input class="submit" type="submit" value="">
         </form>
       </div>
       <div class="row">
@@ -350,7 +350,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p class="designed">Designed by <a href="https://rsktechlabs.com/" target="_blank">RSK Tech Labs</a></p>
+          <p class="designed">Designed by <a href="#" target="_blank">RSK Tech Labs</a></p>
         </div>
       </div>
     </div>
