--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="full">
             <div class="topbar-left">
               <ul class="list-inline">
-                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span><a href="tel:+91-1234567890" class="smooth" style="color: white;" title=""><span class="topbar-hightlight">+1234567890</span> </a></li>
+                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span> <span class="topbar-hightlight">+1234567890</span> </li>
                 <li> <span class="topbar-label"><i class="fa fa-envelope-o"></i></span> <span class="topbar-hightlight"><a href="mailto:info@yourdomain.com">info@yourdomain.com</a></span> </li>
               </ul>
             </div>
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
           <!-- logo start -->
-          <div class="logo"> <a href="index.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
+          <div class="logo"> <a href="it_home.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
           <!-- logo end -->
         </div>
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -90,9 +90,9 @@
                 <li> <a class="active" href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li> <a href="service.html">Service</a>
-                  <ul>
+                  <!-- <ul>
                   <li><a href="service_detail.html">Services Detail</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li> <a href="contact.html">Contact</a></li>
               </ul>
@@ -356,14 +356,14 @@
 </div>
 <!-- end section -->
 <!-- section -->
-<div class="section padding_layout_1">
+<!-- <div class="section padding_layout_1">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="full">
           <div class="main_heading text_align_center">
             <h2>Why Choose Us</h2>
-            <p class="large">Fastest repair service with best price!</p>
+            <p class="large">Fast and Reliable Services</p>
           </div>
         </div>
       </div>
@@ -407,7 +407,7 @@
       </div>
     </div>
     </div>
-    </div>
+    </div> -->
 <!-- end section -->
 <!-- section -->
 <div class="section padding_layout_1 light_silver gross_layout">
@@ -417,7 +417,7 @@
         <div class="full">
           <div class="main_heading text_align_left">
             <h2>Service Process</h2>
-            <p class="large">Easy and effective way to get your device repaired.</p>
+            <p class="large">Easy and effective way to get your vehicle repaired.</p>
           </div>
         </div>
       </div>
@@ -501,10 +501,10 @@
     <div class="row">
       <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 margin_bottom_30_all">
         <div class="product_list">
-          <div class="product_img"> <img class="img-responsive" src="images/it_service/1.jpg" alt=""> </div>
+          <div class="product_img"> <img class="img-responsive" src="images/cs1.jpg" alt=""> </div>
           <div class="product_detail_btm">
             <div class="center">
-              <h4><a href="it_shop_detail.html">Norton Internet Security</a></h4>
+              <h4><a href="it_shop_detail.html">24/7 Customer Support</a></h4>
             </div>
             <div class="starratin">
               <div class="center"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i> </div>
@@ -517,10 +517,10 @@
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 margin_bottom_30_all">
         <div class="product_list">
-          <div class="product_img"> <img class="img-responsive" src="images/it_service/2.jpg" alt=""> </div>
+          <div class="product_img"> <img class="img-responsive" src="images/tt1.jpg" alt=""> </div>
           <div class="product_detail_btm">
             <div class="center">
-              <h4><a href="it_shop_detail.html">Kaspersky Internet Security</a></h4>
+              <h4><a href="it_shop_detail.html">Affordable Towing and Transportaion</a></h4>
             </div>
             <div class="starratin">
               <div class="center"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i> </div>
@@ -533,10 +533,10 @@
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 margin_bottom_30_all">
         <div class="product_list">
-          <div class="product_img"> <img class="img-responsive" src="images/it_service/3.jpg" alt=""> </div>
+          <div class="product_img"> <img class="img-responsive" src="images/wc1.jpg" alt=""> </div>
           <div class="product_detail_btm">
             <div class="center">
-              <h4><a href="it_shop_detail.html">Mcafee Livesafe Antivirus</a></h4>
+              <h4><a href="it_shop_detail.html">Washing and Cleaning</a></h4>
             </div>
             <div class="starratin">
               <div class="center"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i> </div>
@@ -549,10 +549,10 @@
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 margin_bottom_30_all">
         <div class="product_list">
-          <div class="product_img"> <img class="img-responsive" src="images/it_service/4.jpg" alt=""> </div>
+          <div class="product_img"> <img class="img-responsive" src="images/ts1.jpg" alt=""> </div>
           <div class="product_detail_btm">
             <div class="center">
-              <h4><a href="it_shop_detail.html">Norton Internet Security</a></h4>
+              <h4><a href="it_shop_detail.html">Engine Repairing and Maintenance</a></h4>
             </div>
             <div class="starratin">
               <div class="center"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i> </div>
@@ -595,32 +595,29 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="testimonial-container">
-                  <div class="testimonial-content"> You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. 
-                    I am really satisfied with my first laptop service. </div>
+                  <div class="testimonial-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, voluptate in doloremque, ipsa commodi deleniti ipsam voluptatibus aliquid tenetur nulla ratione possimus, dolores sunt quidem exercitationem temporibus distinctio? Quibusdam, architecto.</div>
                   <div class="testimonial-photo"> <img src="images/it_service/client1.jpg" class="img-responsive" alt="#" width="150" height="150"> </div>
                   <div class="testimonial-meta">
-                    <h4>Maria Anderson</h4>
-                    <span class="testimonial-position">CFO, Tech NY</span> </div>
+                    <h4>Client Number 1</h4>
+                    <span class="testimonial-position">Designation of client</span> </div>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="testimonial-container">
-                  <div class="testimonial-content"> You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. 
-                    I am really satisfied with my first laptop service. </div>
+                  <div class="testimonial-content"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur nemo optio ex magnam inventore, quos exercitationem expedita pariatur ullam sequi quasi quaerat porro dolorem magni enim? Error non dolor consequuntur.</div>
                   <div class="testimonial-photo"> <img src="images/it_service/client2.jpg" class="img-responsive" alt="#" width="150" height="150"> </div>
                   <div class="testimonial-meta">
-                    <h4>Maria Anderson</h4>
-                    <span class="testimonial-position">CFO, Tech NY</span> </div>
+                    <h4>Client Number 2</h4>
+                    <span class="testimonial-position">Designation of client</span> </div>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="testimonial-container">
-                  <div class="testimonial-content"> You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. 
-                    I am really satisfied with my first laptop service. </div>
+                  <div class="testimonial-content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo corrupti consequatur nihil veritatis non. Aliquam, accusantium nulla. Facilis, quidem, dicta culpa quo distinctio quasi, doloribus ducimus incidunt animi officia in?</div>
                   <div class="testimonial-photo"> <img src="images/it_service/client3.jpg" class="img-responsive" alt="#" width="150" height="150"> </div>
                   <div class="testimonial-meta">
-                    <h4>Maria Anderson</h4>
-                    <span class="testimonial-position">CFO, Tech NY</span> </div>
+                    <h4>Client number 3</h4>
+                    <span class="testimonial-position">Designation of client</span> </div>
                 </div>
               </div>
             </div>
@@ -646,7 +643,7 @@
               <h2>REQUEST A FREE QUOTE</h2>
               <p>Get answers and advice from people you want it from.</p>
             </div>
-            <div class="button_Section_cont"> <a class="btn dark_gray_bt" href="contact.html">Contact us</a> </div>
+            <div class="button_Section_cont"> <a class="btn dark_gray_bt" href="it_contact.html">Contact us</a> </div>
           </div>
         </div>
       </div>
@@ -656,7 +653,7 @@
 <!-- end section -->
 <!-- section -->
 <div class="section padding_layout_1" style="padding: 50px 0;">
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="full">
@@ -670,7 +667,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 <!-- end section -->
 <!-- Modal -->
@@ -709,7 +706,7 @@
         <form action="#" method="post">
           <input required type="email">
           <label for="email">Email</label>
-          <input class="submit" type="submit" value=""><i class="fas fa-arrow-right" style="color: white;"></i>
+          <input class="submit" type="submit" value="">
         </form>
       </div>
       <div class="row">
@@ -739,7 +736,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p class="designed">Designed by <a href="https://rsktechlabs.com/" target="_blank">RSK Tech Labs</a></p>
+          <p class="designed">Designed by <a href="#" target="_blank">RSK Tech Labs</a></p>
         </div>
       </div>
     </div>
